--- a/appinfo.json
+++ b/appinfo.json
@@ -16,6 +16,11 @@
   },
   "capabilities": [ "configurable" ],
   "resources": {
-    "media": []
+    "media": [{
+      "menuIcon": true,
+      "type": "png",
+      "name": "IMAGE_MENU_ICON",
+      "file": "images/menu_icon.png"
+    }]
   }
 }
